<resources>
    <string name="app_name">Search</string>
    <string name="search_view">SearchView</string>
    <string name="edit_box">EditBox</string>
    <string name="search_here">SearchHere</string>
    <string name="search_icon">SearchIcon</string>
    <string name="EditBox">Name</string>
    <string name="search_hint">Search</string>
    <string name="search_button">SearchButton</string>
    <string name="textview1">TextView1</string>
    <string name="textview2">TextView2</string>
    <string name="loading_list_items">Loading more</string>
    <string name="vociesearch">VocieSearch</string>
    <string name="text">Text</string>
    <string name="image1">Image</string>
    <string name="image">Image</string>
    <string name="region_selection_text">choose your region</string>
    <string name="button_description">Image button to view charts</string>
</resources>
