<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_cyan">

    <AutoCompleteTextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:autofillHints="@string/search_hint"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        android:paddingLeft="5dp" />

    <ImageButton
        android:id="@+id/search_voice_btn"
        android:layout_width="70dp"
        android:layout_height="44dp"
        android:background="@color/gray"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        app:srcCompat="@drawable/ic_keyboard_voice_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        android:paddingLeft="3dp"
        android:contentDescription="@string/vociesearch"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@color/orange"
        android:contentDescription="@string/search_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        app:srcCompat="@drawable/ic_search_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/view_region"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/region_selection_text"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"/>

    <Spinner
        android:id="@+id/region_spinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintVertical_bias="0.202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_region"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/view_charts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_bar_chart_24"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.302"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_region"
        android:contentDescription="@string/button_description" />


</androidx.constraintlayout.widget.ConstraintLayout>